i think it s done. todo tests to check